--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.24.0",
     "express": "^4.18.2",
     "node-cron": "^3.0.2",
+    "node-fetch": "^3.3.1",
     "rxjs": "^7.5.4"
   }
 }
