--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Service for managing a queue of tasks with a delay between them using RxJS",
   "type": "module",
   "main": "queue.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "axios": "^0.24.0",
     "express": "^4.18.2",
     "node-cron": "^3.0.2",
     "node-fetch": "^3.3.1",
